...
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <android.support.design.widget.TextInputEditText
            android:id="@+id/editResult"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:inputType="numberDecimal"
            android:maxLength="9"
...
