...
                    android:layout_marginTop="-12dp"
                    android:alpha="0.4"
                    android:shadowColor="#cccccc"
                    android:shadowRadius="1"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="?android:textColorSecondaryInverse"
                    tools:text="μS/cm" />

                <TextView
                    android:id="@+id/textResult2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
...
