...
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="40dp"
        android:enabled="true"
        android:onClick="onSelectTestClick"
        android:text="@string/test_selected"
        android:theme="?primaryButtonStyle" />

</LinearLayout>

