...
                android:layout_marginBottom="16dp"
                android:enabled="true"
                android:letterSpacing="0"
                android:minWidth="230dp"
                android:minHeight="65dp"
                android:onClick="onStartTestClick"
                android:text="@string/prepare_sample"
                android:textAllCaps="true"
                android:textColor="@color/button_green_selected"
                android:textSize="15sp"
                app:cornerRadius="3dp"
                app:strokeColor="@color/button_green_selected"
                app:strokeWidth="1dp"
...
                android:backgroundTint="@color/button_green"
                android:enabled="true"
                android:letterSpacing="0"
                android:minWidth="230dp"
                android:minHeight="65dp"
                android:onClick="onInstructionsClick"
                android:text="@string/submitResult"
                android:textAllCaps="true"
                android:textSize="15sp"
                app:cornerRadius="3dp"
                tools:targetApi="lollipop" />
        </LinearLayout>
    </LinearLayout>
...
