...
  ~ You should have received a copy of the GNU General Public License
  ~ along with Akvo Caddisfly. If not, see <http://www.gnu.org/licenses/>.
  -->

<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <!--Common-->
    <string name="ok">OK</string>
    <string name="retry">Retry</string>
    <string name="cancel">Cancel</string>
    <string name="start">Start</string>
    <string name="error">Error</string>
    <string name="general">General</string>
    <string name="other">Other</string>
...
